--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "homepage": "https://github.com/besoeasy/Remote-Torrent-Downloader#readme",
   "dependencies": {
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "mime-types": "^2.1.35",
     "nostr-sdk": "^0.0.4",
     "telegraf": "^4.16.3"
