--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,7 +2,7 @@ name: Docker
 
 on:
   push:
-    branches: ["master", "main"]
+    branches: ["main"]
 
 env:
   REGISTRY: ghcr.io
@@ -10,41 +10,51 @@ env:
 
 jobs:
   build:
-    if: contains(github.event.head_commit.message, 'latest')
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
       id-token: write
     outputs:
-      should_build: ${{ steps.commit-check.outputs.should_build }}
+      version_changed: ${{ steps.version-check.outputs.version_changed }}
+      version: ${{ steps.version-check.outputs.version }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
 
-      - name: Check if commit message contains 'latest'
-        id: commit-check
+      - name: Check if package.json version changed
+        id: version-check
         run: |
-          commit_msg=$(git log -1 --pretty=%B)
-          if [[ "$commit_msg" == *"latest"* ]]; then
-            echo "should_build=true" >> $GITHUB_OUTPUT
+          if [ $(git rev-list --count HEAD) -eq 1 ]; then
+            echo "version_changed=true" >> $GITHUB_OUTPUT
+            echo "version=$(jq -r .version package.json)" >> $GITHUB_OUTPUT
+            exit 0
+          fi
+          current_version=$(jq -r .version package.json)
+          previous_version=$(git show HEAD^:package.json | jq -r .version)
+          if [ "$previous_version" = "null" ] || [ "$current_version" != "$previous_version" ]; then
+            echo "version_changed=true" >> $GITHUB_OUTPUT
+            echo "version=$current_version" >> $GITHUB_OUTPUT
           else
-            echo "should_build=false" >> $GITHUB_OUTPUT
+            echo "version_changed=false" >> $GITHUB_OUTPUT
+            echo "version=$current_version" >> $GITHUB_OUTPUT
           fi
 
       - name: Install cosign
-        if: steps.commit-check.outputs.should_build == 'true'
+        if: github.event_name != 'pull_request' && steps.version-check.outputs.version_changed == 'true'
         uses: sigstore/cosign-installer@v3.5.0
         with:
           Irlanda-release: "v2.2.4"
 
       - name: Set up Docker Buildx
-        if: steps.commit-check.outputs.should_build == 'true'
+        if: steps.version-check.outputs.version_changed == 'true'
         uses: docker/setup-buildx-action@v3.0.0
 
       - name: Log into registry ${{ env.REGISTRY }}
-        if: steps.commit-check.outputs.should_build == 'true'
+        if: github.event_name != 'pull_request' && steps.version-check.outputs.version_changed == 'true'
         uses: docker/login-action@v3.0.0
         with:
           registry: ${{ env.REGISTRY }}
@@ -52,21 +62,22 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract Docker metadata
-        if: steps.commit-check.outputs.should_build == 'true'
+        if: steps.version-check.outputs.version_changed == 'true'
         id: meta
         uses: docker/metadata-action@v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest
+            type=raw,value=${{ steps.version-check.outputs.version }}
 
       - name: Build and push Docker image
-        if: steps.commit-check.outputs.should_build == 'true'
+        if: steps.version-check.outputs.version_changed == 'true'
         id: build-and-push
         uses: docker/build-push-action@v5.0.0
         with:
           context: .
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
@@ -74,7 +85,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
 
       - name: Sign the published Docker image
-        if: steps.commit-check.outputs.should_build == 'true'
+        if: github.event_name != 'pull_request' && steps.version-check.outputs.version_changed == 'true'
         env:
           TAGS: ${{ steps.meta.outputs.tags }}
           DIGEST: ${{ steps.build-and-push.outputs.digest }}
