--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "rtd",
   "main": "app.js",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "start": "node app.js"
@@ -18,7 +19,6 @@
   "dependencies": {
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
-    "mime-types": "^2.1.35",
     "nostr-sdk": "^0.0.4",
     "telegraf": "^4.16.3"
   }
