--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Read package.json version
         if: steps.commit-check.outputs.should_build == 'true'
         id: pkg
-        run: echo "version=$(node -p \"require('./package.json').version\")" >> $GITHUB_OUTPUT
+        run: echo "version=$(node -p 'require("./package.json").version')" >> $GITHUB_OUTPUT
 
       - name: Extract Docker metadata
         if: steps.commit-check.outputs.should_build == 'true'
