--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,47 +4,34 @@ on:
   push:
     branches: ["master", "main"]
 
+  workflow_dispatch:
+
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   build:
-    if: contains(github.event.head_commit.message, 'latest')
+    if: github.event_name == 'workflow_dispatch' || contains(github.event.head_commit.message, 'latest')
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
       id-token: write
-    outputs:
-      should_build: ${{ steps.commit-check.outputs.should_build }}
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Check if commit message contains 'latest'
-        id: commit-check
-        run: |
-          commit_msg=$(git log -1 --pretty=%B)
-          if [[ "$commit_msg" == *"latest"* ]]; then
-            echo "should_build=true" >> $GITHUB_OUTPUT
-          else
-            echo "should_build=false" >> $GITHUB_OUTPUT
-          fi
-
       - name: Install cosign
-        if: steps.commit-check.outputs.should_build == 'true'
         uses: sigstore/cosign-installer@v3.5.0
         with:
           Irlanda-release: "v2.2.4"
 
       - name: Set up Docker Buildx
-        if: steps.commit-check.outputs.should_build == 'true'
         uses: docker/setup-buildx-action@v3.0.0
 
       - name: Log into registry ${{ env.REGISTRY }}
-        if: steps.commit-check.outputs.should_build == 'true'
         uses: docker/login-action@v3.0.0
         with:
           registry: ${{ env.REGISTRY }}
@@ -52,27 +39,30 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Read package.json version
-        if: steps.commit-check.outputs.should_build == 'true'
         id: pkg
-        run: echo "version=$(node -p 'require("./package.json").version')" >> $GITHUB_OUTPUT
+        run: |
+          if [ -f package.json ]; then
+            echo "has_version=true" >> $GITHUB_OUTPUT
+            echo "version=$(node -p 'require("./package.json").version')" >> $GITHUB_OUTPUT
+          else
+            echo "has_version=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Extract Docker metadata
-        if: steps.commit-check.outputs.should_build == 'true'
         id: meta
         uses: docker/metadata-action@v5.0.0
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest
-            type=raw,value=${{ steps.pkg.outputs.version }}
+            type=raw,value=${{ steps.pkg.outputs.version }},enable=${{ steps.pkg.outputs.has_version == 'true' }}
 
       - name: Build and push Docker image
-        if: steps.commit-check.outputs.should_build == 'true'
         id: build-and-push
         uses: docker/build-push-action@v5.0.0
         with:
           context: .
-          push: true
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
@@ -80,7 +70,7 @@ jobs:
           platforms: linux/amd64,linux/arm64
 
       - name: Sign the published Docker image
-        if: steps.commit-check.outputs.should_build == 'true'
+        if: github.event_name != 'pull_request'
         env:
           TAGS: ${{ steps.meta.outputs.tags }}
           DIGEST: ${{ steps.build-and-push.outputs.digest }}
